# PerceptorGuard

./: .gitattributes  .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  verify.py
.github/workflows/: ci_gate.yml  nightly.yml
artifacts/baseline/: metrics_class.csv  metrics_clutter_bin.csv  metrics_lighting_bin.csv
artifacts/ci_baseline/: metrics_class.csv  metrics_clutter_bin.csv  metrics_distance_bin.csv  metrics_overall.csv
artifacts/ci_dataset/: manifest.csv
artifacts/ci_dataset/scenes/scene_0000/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0001/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0002/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0003/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0004/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0005/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0006/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0007/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0008/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0009/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0010/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0011/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0012/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0013/: ground_truth.json
artifacts/ci_dataset/scenes/scene_0014/: ground_truth.json
artifacts/ci_eval/: matches.csv  metrics_gt_tier.csv  metrics_lighting_bin.csv  metrics_profile.csv
artifacts/eval/: matches.csv  metrics_distance_bin.csv  metrics_gt_tier.csv  metrics_overall.csv  metrics_profile.csv
artifacts/report/: report.html  report.md
artifacts/triage/: cluster_summary.csv  failures_classified.csv
assets/: bottle.urdf  bowl.urdf
configs/: gate_thresholds.yml
gates/: comparator.py  gate_runner.py  thresholds.py
ingestion/: class_map.py  coco_gt.py  coco_predictions.py  exceptions.py  metadata_csv.py  slice_inferrer.py  validator.py
metrics/: cluster_analyzer.py  engine.py  failure_classifier.py  reporter.py  triage_reporter.py
perceptorguard/: cli.py
reports/: annotator.py  renderer.py  tracker.py
reports/templates/: report.html.j2  report.md.j2
runner/: eval_runner.py  gt_extractor.py  matcher.py  scene_runner.py
scenarios/: __init__.py  generator.py  schemas.py
scripts/: demo_regression.py  generate.py  generate_report.py  run_coco_eval.py  run_eval.py  run_gate.py  save_baseline.py  triage.py
tests/: test_class_map.py  test_coco_ingestion.py  test_gates.py  test_generator.py  test_matcher.py  test_metadata_csv.py  test_metrics.py  test_scene_runner.py  test_schemas.py  test_slice_inferrer.py  test_triage.py  test_validator.py  verify_chunk2.py
(+5 files in other folders)
