[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "perceptorguard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pybullet>=3.2.6",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.2.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
