[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptorguard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
synthetic = [
    "pybullet>=3.2.6",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.2.0",
]
dev = ["pytest>=8.2.0"]

[project.scripts]
perceptorguard = "perceptorguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
