[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptorguard"
version = "0.1.1"
description = "Perception model evaluation harness — sliced metrics, failure triage, and CI regression gating for detection models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["object-detection", "evaluation", "metrics", "yolo", "coco", "perception", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/perceptorguard"
"Bug Tracker" = "https://github.com/your-org/perceptorguard/issues"

[project.optional-dependencies]
synthetic = [
    "pybullet>=3.2.6",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.2.0",
]
dev = ["pytest>=8.2.0"]

[project.scripts]
perceptorguard = "perceptorguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
